[tool.poetry]
name = "fl-bench"
version = "0.1.0"
description = "Benchmark of federated learning that aim solving image classification tasks."
authors = ["KarhouTam <karhoutam@qq.com>"]
license = "GPL-2.0-or-later"
readme = ["README.md", "data/README.md"]
repository = "https://github.com/KarhouTam/FL-bench"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.sustech.edu.cn/pypi/simple"
priority = "default"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
torch = "2.1.2"
torchvision = "0.16.2"
torchaudio = "2.1.2"
rich = "13.3.5"
numpy = "1.26.3"
pandas = "2.0.1"
visdom = "0.2.4"
Pillow = "10.0.1"
scipy = "1.10.1"
matplotlib = "3.7.1"
scikit-learn = "1.2.2"
faiss-cpu = "1.7.4"
pynvml = "11.5.0"
PyYAML = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
