[tool.poetry]
name = "fl-bench"
version = "0.2.0"
description = "Benchmark of federated learning that aim solving image classification tasks."
authors = ["KarhouTam <karhoutam@qq.com>"]
license = "MIT"
readme = ["../README.md", "../data/README.md"]
repository = "https://github.com/KarhouTam/FL-bench"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.sustech.edu.cn/pypi/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
torch = "2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
rich = "13.7.1"
numpy = "1.26.4"
pandas = "^2.2.2"
visdom = "^0.2.4"
Pillow = "^10.3.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
faiss-cpu = "^1.7.4"
pynvml = "^11.5.0"
PyYAML = "^6.0.1"
ray = { extras = ["default"], version = "2.36.1" }
tensorboard = "^2.16.2"
cvxpy = "^1.5.1"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
