[tool.poetry]
name = "fl-bench"
version = "0.2.0"
description = "Benchmark of federated learning that aim solving image classification tasks."
authors = [
    "KarhouTam <karhoutam@qq.com>",
    "Xinpeng Wang <223015056@link.cuhk.edu.cn>",
]
license = "MIT"
readme = ["../README.md", "../data/README.md"]
repository = "https://github.com/KarhouTam/FL-bench"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.sustech.edu.cn/pypi/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
torch = "2.4.1"
torchvision = "^0.19.1"
rich = "13.7.1"
numpy = "1.26.4"
pandas = "^2.2.3"
visdom = "^0.2.4"
Pillow = "^11.1.0"
scipy = "^1.15.2"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
faiss-cpu = "^1.9.0"
pynvml = "^12.0.0"
PyYAML = "^6.0.2"
ray = { extras = ["default"], version = "2.44.0" }
tensorboard = "^2.17.1"
cvxpy = "^1.5.1"
hydra-core = "^1.3.2"
flwr-datasets = "^0.4.0"
statsmodels = "^0.14.4"
pytorch-minimize = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
